# Fdf

./: CMakeLists.txt  Makefile  color.c  draw.c  draw_line.c  fdf  fdfHeader.h  gradient.c  header.h  img_operation.c  main.c  map.drawio  message_errors.c  output.c  record_map.c  standart_output.c  turns.c  valid.c
includes/: fdfHeader.h  fdfheader.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  (+20 more)
libft/srcs/: get_next_line.c
src/: color.c  controller.c  draw.c  image_operations.c  main.c  message_errors.c  output.c  output_sec.c  pre_draw.c  record_map.c  valid.c
test_maps/: pyramide.fdf
